--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -2,3 +2,9 @@ body {
     margin: 0;
     padding: 0;
 }
+.centered_text {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
